java 8 support attempt